Moved unessesary class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 project(Atlas)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_SYSTEM_PROCESSOR arm)
-set(CMAKE_C_COMPILER "arm-linux-gnueabi-gcc")
-set(CMAKE_CXX_COMPILER "arm-linux-gnueabi-g++")
+set(SYS_ARCH ${CMAKE_SYSTEM_PROCESSOR})
 
+if(${SYS_ARCH} STREQUAL "arm")
+        set(CMAKE_C_COMPILER "arm-linux-gnueabi-gcc")
+        set(CMAKE_CXX_COMPILER "arm-linux-gnueabi-g++")
+endif()
+message(${SYS_ARCH})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 file(GLOB_RECURSE SOURCE_FILES
