--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ file(GLOB_RECURSE SOURCE_FILES
         )
 
 add_executable(Atlas ${SOURCE_FILES})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(Atlas PUBLIC /usr/local/include/)
-target_link_libraries(Atlas -ladafruit-bbio0 -ladafruit-bbio1 -pthread)
+target_link_libraries(Atlas -pthread)
