--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ file(GLOB_RECURSE SOURCE_FILES
 
 add_executable(Atlas ${SOURCE_FILES})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_include_directories(Atlas PUBLIC /usr/local/include/)
+target_include_directories(Atlas PUBLIC /usr/local/include/ ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(Atlas -pthread)
